test/ui/analyze-types.stderr
error[E035]: attempt to analyze a type
   ┌─ ${TEST_FOLDER}/analyze-types.lushui:7:5
   │
 7 │       case A of
   · ╔═════╝
10 │ ║         let _ => false
   │ ╚══════════════════════╝
   │
  note: forbidden to uphold parametricity and type erasure

error: aborting due to previous error

