test/ui/analyze-types.lushui
use extern.core.(
    type.Type,
    bool.(false, true, Bool),
    )

is-nat32-or-nat64 (A: Type -> Type): Bool =
    case A of
        extern.core.nat32.Nat32 => true
        extern.core.nat64.Nat64 => true
        let _ => false
